# BassMusicGear

./: .gitignore  AmpVoicingPlan.md  BackLog.md  CLAUDE.md  CMakeLists.txt  DEVENV.md  MAC_BUILD_SETUP.md  PACKAGING_GUIDE.md  PLAN.md  PLATFORM_AND_INTEGRATION.md  PRD.md  PROMPT.md  TOOLING.md
.claude/agents/: BackLogManager.md  BuildDoctor.md  CodeBuilder.md  CodeCommenter.md  CodeDeveloper.md  CodeReviewer.md  CodeTester.md  DspReviewer.md  JucePatternAdvisor.md  PresetMigrator.md  ToolCreator.md
.claude/commands/: AddParam.md  Complete.md  DspAudit.md  NewAmpModel.md  Phase.md  ToneStack.md
Resources/: placeholder.txt
Resources/Presets/: Factory_AmericanVintage_Clean.xml  Factory_AmericanVintage_Driven.xml  Factory_AmericanVintage_Heavy.xml  Factory_BritishStack_Clean.xml  Factory_BritishStack_Driven.xml  Factory_BritishStack_Heavy.xml  Factory_ItalianClean_Clean.xml  Factory_ItalianClean_Driven.xml  Factory_ItalianClean_Heavy.xml  Factory_ModernMicro_Clean.xml  Factory_ModernMicro_Driven.xml  Factory_ModernMicro_Heavy.xml  Factory_TweedBass_Clean.xml  Factory_TweedBass_Driven.xml  Factory_TweedBass_Heavy.xml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AmpVoicing.cpp  AmpVoicing.h  BiAmpCrossover.cpp  BiAmpCrossover.h  Cabinet.cpp  Cabinet.h  DIBlend.cpp  DIBlend.h  GraphicEQ.cpp  GraphicEQ.h  PowerAmp.cpp  PowerAmp.h  Preamp.cpp  Preamp.h  SignalChain.cpp  SignalChain.h  ToneStack.cpp  ToneStack.h  Tuner.cpp  Tuner.h
Source/DSP/Effects/: Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  EnvelopeFilter.cpp  EnvelopeFilter.h  NoiseGate.cpp  NoiseGate.h  Octaver.cpp  Octaver.h  Overdrive.cpp  Overdrive.h  Reverb.cpp  Reverb.h
Source/Models/: AmpModel.h  AmpModelLibrary.cpp  AmpModelLibrary.h
Source/Presets/: PresetManager.cpp  PresetManager.h
Source/UI/: AmpPanel.cpp  AmpPanel.h  BiAmpPanel.cpp  BiAmpPanel.h  CabinetSelector.cpp  CabinetSelector.h  DIBlendPanel.cpp  DIBlendPanel.h  EffectBlock.cpp  EffectBlock.h  GraphicEQPanel.cpp  GraphicEQPanel.h  Knob.cpp  Knob.h  PresetPanel.cpp  PresetPanel.h  TunerDisplay.cpp  TunerDisplay.h
Tests/: AmpVoicingTest.cpp  BiAmpCrossoverTest.cpp  CMakeLists.txt  CompressorTest.cpp  DIBlendTest.cpp  DelayBpmSyncTest.cpp  GraphicEQTest.cpp  InputPadTest.cpp  NoiseGateTest.cpp  OverdriveTest.cpp  PowerAmpTest.cpp  PreampTest.cpp  PresetTest.cpp  ReverbTest.cpp  SmokeTest.cpp  SmokeTest_Phase0.md  SmokeTest_Phase1.md  SmokeTest_Phase2.md  SmokeTest_Phase3.md  SmokeTest_Phase4.md  SmokeTest_Phase5.md  SmokeTest_Phase6.md  SmokeTest_Phase7.md  SmokeTest_Phase8.md  ToneStackTest.cpp  TunerTest.cpp
memory/: MEMORY.md  project_mono_input.md
scripts/: CleanBuild.sh  GenBinaryData.sh
